Fixed helmet overlapping

--- a/src/app/player-details/player-details.component.css
+++ b/src/app/player-details/player-details.component.css
@@ -35,5 +35,5 @@ md-chip-list {
     height: 75px;
     position: absolute;
     top: 10px;
-    right: 350px;
+    right: 400px;
 }
